// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User gets public and private closet lists for current user: data 1`] = `
Object {
  "user": Object {
    "closetLists": Array [
      Object {
        "id": "184791",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39948",
            "name": "Altador Cup Background - Lost Desert",
          },
        ],
        "name": "A Private Own List",
        "ownsOrWantsItems": "OWNS",
      },
      Object {
        "id": "184793",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39945",
            "name": "Altador Cup Background - Haunted Woods",
          },
        ],
        "name": "A Private Want List",
        "ownsOrWantsItems": "WANTS",
      },
      Object {
        "id": "184790",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39955",
            "name": "Altador Cup Background - Virtupets",
          },
        ],
        "name": "A Public Own List",
        "ownsOrWantsItems": "OWNS",
      },
      Object {
        "id": "184792",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39947",
            "name": "Altador Cup Background - Shenkuu",
          },
        ],
        "name": "A Public Want List",
        "ownsOrWantsItems": "WANTS",
      },
      Object {
        "id": "user-44743-default-list-OWNS",
        "isDefaultList": true,
        "items": Array [
          Object {
            "id": "74967",
            "name": "17th Birthday Party Hat",
          },
          Object {
            "id": "49026",
            "name": "Abominable Snowman Hat",
          },
          Object {
            "id": "40319",
            "name": "Blue Jelly Tiara",
          },
        ],
        "name": "Not in a list",
        "ownsOrWantsItems": "OWNS",
      },
      Object {
        "id": "user-44743-default-list-WANTS",
        "isDefaultList": true,
        "items": Array [
          Object {
            "id": "39956",
            "name": "Altador Cup Background - Kreludor",
          },
        ],
        "name": "Not in a list",
        "ownsOrWantsItems": "WANTS",
      },
    ],
    "id": "44743",
    "username": "dti-test",
  },
}
`;

exports[`User gets public and private closet lists for current user: db 1`] = `
Array [
  Array [
    "SELECT * FROM users WHERE id IN (?)",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT closet_hangers.*, item_translations.name as item_name FROM closet_hangers
       INNER JOIN items ON items.id = closet_hangers.item_id
       INNER JOIN item_translations ON
         item_translations.item_id = items.id AND locale = \\"en\\"
       WHERE user_id IN (?)
       ORDER BY item_name",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT * FROM closet_lists
       WHERE user_id IN (?)
       ORDER BY name",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT * FROM item_translations WHERE item_id IN (?,?,?,?,?,?,?,?) AND locale = \\"en\\"",
    Array [
      "39948",
      "39945",
      "39955",
      "39947",
      "74967",
      "49026",
      "40319",
      "39956",
    ],
  ],
]
`;

exports[`User gets public closet lists, but not private, for other users: data 1`] = `
Object {
  "user": Object {
    "closetLists": Array [
      Object {
        "id": "184790",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39955",
            "name": "Altador Cup Background - Virtupets",
          },
        ],
        "name": "A Public Own List",
        "ownsOrWantsItems": "OWNS",
      },
      Object {
        "id": "184792",
        "isDefaultList": false,
        "items": Array [
          Object {
            "id": "39947",
            "name": "Altador Cup Background - Shenkuu",
          },
        ],
        "name": "A Public Want List",
        "ownsOrWantsItems": "WANTS",
      },
    ],
    "id": "44743",
    "username": "dti-test",
  },
}
`;

exports[`User gets public closet lists, but not private, for other users: db 1`] = `
Array [
  Array [
    "SELECT * FROM users WHERE id IN (?)",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT closet_hangers.*, item_translations.name as item_name FROM closet_hangers
       INNER JOIN items ON items.id = closet_hangers.item_id
       INNER JOIN item_translations ON
         item_translations.item_id = items.id AND locale = \\"en\\"
       WHERE user_id IN (?)
       ORDER BY item_name",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT * FROM closet_lists
       WHERE user_id IN (?)
       ORDER BY name",
    Array [
      "44743",
    ],
  ],
  Array [
    "SELECT * FROM item_translations WHERE item_id IN (?,?) AND locale = \\"en\\"",
    Array [
      "39955",
      "39947",
    ],
  ],
]
`;
